# todo-list

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  perf_test.py  pyproject.toml  pytest.ini
.specify/memory/: constitution.md
docker/: grafana-dashboard.json  grafana-dashboards.yml  prometheus.yml
docs/: RRD.md  human-ai-fix-workflow.drawio  spec-driven-flow.drawio  tech-overview.md
specs/001-todo-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  testcase.md
specs/001-todo-api/checklists/: requirements.md
specs/001-todo-api/contracts/: openapi.yaml
src/: main.py
src/api/: __init__.py  health.py  metrics.py  todos.py
src/middleware/: __init__.py  logging.py  metrics.py  request_id.py
src/models/: __init__.py  todo.py
src/storage/: __init__.py  memory.py
tests/: __init__.py  conftest.py
tests/contract/: test_health_api.py  test_metrics_api.py  test_request_id.py  test_todo_api.py
tests/integration/: test_logging_integration.py  test_metrics_integration.py  test_todo_lifecycle.py
tests/unit/: test_models.py  test_storage.py
